# pointp

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
examples/: animation_example.py  pointp_video.py  poisson_binom.py  sepp_examples.py  video_example.py
pointp/: plot.py  pointp.py  sepp.py  simulate.py  tools.py
pointp/dash_apps/: app.py  dash_helper.py  definition.py  demo.py  demo_components.py  explore_2d.py
pointp/dash_apps/pages/: definition.py  home.py  homogeneous.py  inhomogeneous.py  poisson_distribution.py  poisson_general.py  quit.py  sepp.py  two_dimensions.py  video_example.py
