[metadata]
name = dimexp
version = 0.0.1

[options]
packages = find:

install_requires =
    python_version >= "3.10.7"
    dash>=2.7.1
    dash-bootstrap-components>=1.2.1
    dash-core-components>=2.0.0
    dash-html-components>=2.0.0
    matplotlib>=3.6.2
    more-itertools>=9.0.0
    numpy>=1.23.5
    pandas>=1.5.2
    plotly>=5.11.0
    scikit-learn>=1.2.0
    scipy>=1.9.3
    pytest>=7.2.0

include_package_data = True

[options.packages.find]
exclude =
    dimexp/build_mani_example.py
    build_cluster_example.py



[options.entry_points]
console_scripts =
    showc = dimexp.dash_apps.show_clusters:main
    showe = dimexp.dash_apps.show_embeddings:main

