[metadata]
name = pointp
version = 0.0.2

[options]
packages = find:

install_requires =
    python_version >= "3.9.1"
    dash>=2.7.1
    dash-bootstrap-components>=1.2.1
    dash-core-components>=2.0.0
    dash-html-components>=2.0.0
    more-itertools>=9.0.0
    numpy>=1.23.5
    pandas>=1.5.2
    plotly>=5.11.0
    scipy>=1.9.3

include_package_data = True

[options.packages.find]
exclude =
    pointp/dash_apps/explore_2d.py
    examples/*

[options.entry_points]
console_scripts =
    ppdemo = pointp.dash_apps.app:main

